updated features and upcoming features content

--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="./assets/app-icon.png" alt="VocabsKing Icon" class="app-icon">
-            <h1>VocabsKing</h1>
+            <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
+            <h1>vocabsKing: Daily New Words</h1>
         </div>
     </header>
     
     <main class="container">
         <section class="app-section">
             <div class="app-header">
-                <h2 class="title">Features Of VocabsKing</h2>
-                <img src="./assets/app-icon.png" alt="VocabsKing Icon" class="section-app-icon">
+                <h2 class="title">Features Of vocabsKing</h2>
+                <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="section-app-icon">
             </div>
             <p class="description">
-                VocabsKing is your daily companion for vocabulary enhancement. Every day, you'll receive 10 new carefully selected words based on your chosen difficulty level. Each word comes with:
+                vocabsKing is your daily companion for vocabulary enhancement. Every day, you'll receive 10 new carefully selected words based on your chosen difficulty level. Each word comes with:
             </p>
             <ul class="features-list">
                 <li>English meanings and definitions</li>
                 <li>Hindi translations</li>
                 <li>Synonyms and antonyms</li>
                 <li>Usage examples in sentences</li>
+                <li>10 curated words from The Hindu Editorial daily</li>
             </ul>
 
             <h3 class="subtitle">Upcoming Features</h3>
             <ul class="features-list upcoming">
-                <li><i class="fas fa-star"></i> 10 high-quality words from The Hindu Editorial daily</li>
+                <li><i class="fas fa-star"></i> Word pronunciation</li>
+                <li><i class="fas fa-star"></i> Search words for Hindi and English meanings</li>
             </ul>
-            
             <a href="https://play.google.com/store/apps/details?id=com.vocabsking" class="play-store-button" target="_blank">
                 <i class="fab fa-google-play"></i>
                 Download from Play Store
