added privacy policy page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <h2 class="title">Features Of vocabsKing</h2>
                 <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="section-app-icon">
             </div>
+            
             <p class="description">
                 vocabsKing is your daily companion for vocabulary enhancement. Every day, you'll receive 10 new carefully selected words based on your chosen difficulty level. Each word comes with:
             </p>
@@ -31,7 +32,14 @@
                 <li>Synonyms and antonyms</li>
                 <li>Usage examples in sentences</li>
                 <li>10 curated words from The Hindu Editorial daily</li>
+                <li>Dark mode supported for eye protection!</li>
             </ul>
+            <p class="highlight-text">
+                <i class="fas fa-trophy"></i>
+                Great App for competitive exams like Bank,SSC and Other Government Exams!
+            </p>
+
+         
 
             <h3 class="subtitle">Upcoming Features</h3>
             <ul class="features-list upcoming">
@@ -84,6 +92,10 @@
             <a href="https://github.com/GodOmParticle999" class="contact-link" target="_blank">
                 <i class="fab fa-github"></i>
                 <span>GitHub</span>
+            </a>
+            <a href="privacy.html" class="contact-link">
+                <i class="fas fa-shield-alt"></i>
+                <span>Privacy Policy</span>
             </a>
         </div>
     </footer>
