added terms and conditions page

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 <i class="fas fa-shield-alt"></i>
                 <span>Privacy Policy</span>
             </a>
+            <a href="terms.html" class="contact-link">
+                <i class="fas fa-file-contract"></i>
+                <span>Terms</span>
+            </a>
         </div>
     </footer>
 
