--- a/terms.html
+++ b/terms.html
@@ -10,8 +10,10 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
-            <h1>vocabsKing: Daily New Words</h1>
+            <a href="index.html">
+                <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
+                <h1>vocabsKing: Daily New Words</h1>
+            </a>
         </div>
     </header>
     
