added about us page for vocabsKing app

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Hindi translations</li>
                 <li>Synonyms and antonyms</li>
                 <li>Usage examples in sentences</li>
+                <li>Parts of speech (Noun, Verb, Adjective, etc.)</li>
                 <li>10 curated words from The Hindu Editorial daily</li>
                 <li>Dark mode supported for eye protection!</li>
             </ul>
@@ -92,6 +93,10 @@
             <a href="https://github.com/GodOmParticle999" class="contact-link" target="_blank">
                 <i class="fab fa-github"></i>
                 <span>GitHub</span>
+            </a>
+            <a href="about.html" class="contact-link">
+                <i class="fas fa-info-circle"></i>
+                <span>About Us</span>
             </a>
             <a href="privacy.html" class="contact-link">
                 <i class="fas fa-shield-alt"></i>
