fixed navigation issue and updated features section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
-            <h1>vocabsKing: Daily New Words</h1>
+            <a href="index.html" class="logo-link">
+                <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
+                <h1>vocabsKing: Daily New Words</h1>
+            </a>
+            <nav class="header-nav">
+                <a href="index.html" class="nav-link active">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="privacy.html" class="nav-link">Privacy</a>
+                <a href="terms.html" class="nav-link">Terms</a>
+            </nav>
         </div>
     </header>
     
@@ -31,6 +39,7 @@
                 <li>Hindi translations</li>
                 <li>Synonyms and antonyms</li>
                 <li>Usage examples in sentences</li>
+                <li>Hindi example sentences for better understanding</li>
                 <li>Parts of speech (Noun, Verb, Adjective, etc.)</li>
                 <li>10 curated words from The Hindu Editorial daily</li>
                 <li>Dark mode supported for eye protection!</li>
