--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             </a>
             <nav class="header-nav">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="about.html" class="nav-link">About</a>
+                <a href="about.html" class="nav-link active">About</a>
                 <a href="privacy.html" class="nav-link">Privacy</a>
                 <a href="terms.html" class="nav-link">Terms</a>
             </nav>
