--- a/terms.html
+++ b/terms.html
@@ -10,10 +10,16 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html">
+            <a href="index.html" class="logo-link">
                 <img src="./assets/app-icon.png" alt="vocabsKing Icon" class="app-icon">
                 <h1>vocabsKing: Daily New Words</h1>
             </a>
+            <nav class="header-nav">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="privacy.html" class="nav-link">Privacy</a>
+                <a href="terms.html" class="nav-link active">Terms</a>
+            </nav>
         </div>
     </header>
     
